@@ -1,0 +1,198 @@
+<?php
+
+    /**
+     * Slovenian language file
+     *
+     * @package frog
+     * @subpackage translations
+     *
+     * @author Peter Rajh <peter@elra.si>, Andrej Čremožnik <andrej.cremoznik@gmail.com>
+     * @version Frog 0.9.5
+     */
+
+    return array(
+    	'&#8212; inherit &#8212;' => '&#8212; podeduj &#8212;',
+	'<b>Information!</b> New Frog version available (v. <b>:version</b>)! Visit <a href="http://www.madebyfrog.com/">http://www.madebyfrog.com/</a> to upgrade your version!' => '<b>Obvestilo!</b> Na voljo je nova različica Frog CMS (v. <b>:version</b>)! Obiščite <a href="http://www.madebyfrog.com">http://www.madebyfrog.com</a>, da nadgradite svojo verzijo!',
+	'A translatable string with a %param% system.' => 'Prevedljiv niz z %param% sistemom.',
+	'A translatable string.' => 'Prevedljiv niz.',
+	'Action disabled!' => 'Dejanje onemogočeno!',
+	'Add' => 'Dodaj',
+	'Add Page' => 'Dodaj stran',
+	'Add Part' => 'Add Part',
+	'Add Tab' => 'Dodaj zavihek',
+	'Add child' => 'Dodaj pod-element',
+	'Add layout' => 'Dodaj postavitev',
+	'Add snippet' => 'Dodaj izrezek',
+	'Add user' => 'Dodaj uporabnika',
+	'Admin Site title' => 'Naslov administracijskege vmesnika',
+	'Administration' => 'Administracija',
+	'Administration Theme' => 'Tema administracijskega vmesnika',
+	'Allow HTML in Title' => 'Dovoli HTML v naslovu',
+	'Approve' => 'Odobrite',
+	'Are you sure you wish to delete' => 'Ali ste prepričani, da želite izbrisati',
+	'Are you sure you wish to delete it?' => 'Ali ste prepričani, da želite izbrisati?',
+	'At least 3 characters. Must be unique.' => 'Najmanj 3 znaki. Mora biti unikatno.',
+	'At least 5 characters.' => 'Najmanj 5 znakov.',
+	'Body' => 'Telo',
+	'Breadcrumb' => 'Drobtinica',
+	'By using <strong>&lt;img src="img_path" /&gt;</strong> you can set your company logo instead of a title.' => 'Z uporabo <strong>&lt;img src="pot_do_slike" /&gt;</strong> lahko nastavite logo vašega podjetja nemsto tega naslova.',
+	'Cancel' => 'Prekliči',
+	'Close' => 'Zapri',
+	'Comments' => 'Komentarji',
+	'Confirm Password' => 'Potrdi geslo',
+	'Content-Type' => 'Tip vsebine (Content-Type)',
+	'Create Core template' => 'Izdelaj predlogo jedra',
+	'Create Plugin templates' => 'Izdelaj predloge vtičnikov',
+	'Created date' => 'Ustvarjen dne',
+	'Default Filter' => 'Privzet filter',
+	'Default Status' => 'Privzet status',
+	'Default tab' => 'Privzet zavihek',
+	'Delete' => 'Izbriši',
+	'Delete the current tab?' => 'Izbriši trenutni zavihek?',
+	'Description' => 'Opis',
+	'Determines whether or not HTML code is allowed in a page\'s title.' => 'Določi ali naj bo HTML koda dovoljena v imenu strani.',
+	'Draft' => 'Osnutek',
+	'Drag and Drop' => 'Povleci in spusti',
+	'Drag to Copy' => 'Povleci in kopiraj',
+	'E-mail' => 'E-mail',
+	'Edit Page' => 'Uredi stran',
+	'Edit comment' => 'Uredi komentar',
+	'Edit layout' => 'Uredi postavitev',
+	'Edit snippet' => 'Uredi izrezek',
+	'Edit user' => 'Uredi uporabnika',
+	'Email' => 'Email',
+	'Email address' => 'E-mail naslov',
+	'Enabled' => 'Omogočen',
+	'Feedback' => 'Sporočite svoje izkušnje',
+	'Filter' => 'Filter',
+	'Forgot password' => 'Pozabljeno geslo',
+	'Forgot password?' => 'Ste pozabili geslo?',
+	'Help us <a href=":url">translate Frog</a>!' => 'Pomagajte nam <a href=":url">prevesti Frog</a>!',
+	'Hidden' => 'Skrito',
+	'Just replace <b>snippet</b> by the snippet name you want to include.' => 'Samo zamenjajte <b>snippet</b> z imenom izrezka, ki ga želite vključiti.',
+	'Keywords' => 'Ključne besede',
+	'Language' => 'Jezik',
+	'Last updated by' => 'Zadnjič posodobil',
+	'Latest' => 'Najnovejši',
+	'Layout' => 'Postavitev',
+	'Layout <b>:name</b> has been deleted!' => 'Postavitev <b>:name</b> je bila izbrisana!',
+	'Layout <b>:name</b> has not been deleted!' => 'Postavitev <b>:name</b> ni bila izbrisana!',
+	'Layout <b>:name</b> is used! It CAN NOT be deleted!' => 'Postavitev <b>:name</b> je v uporabi in ne more biti izbrisana!',
+	'Layout has been added!' => 'Postavitev je bila dodana!',
+	'Layout has been saved!' => 'Postavitev je bila shranjena!',
+	'Layout has not been added. Name must be unique!' => 'Postavitev ni bila dodana. Ime mora biti unikatno!',
+	'Layout has not been saved. Name must be unique!' => 'Postavitev ni bila shranjena. Ime mora biti unikatno!',
+	'Layout not found!' => 'Postavitev ni bila najdena!',
+	'Layouts' => 'Postavitve',
+	'Leave password blank for it to remain unchanged.' => 'Če gesla ne želite spremeniti, pustite prazno.',
+	'Log Out' => 'Odjava',
+	'Login' => 'Prijava',
+	'Login failed. Please check your login data and try again.' => 'Prijava ni bila uspešna. Prosim preverite prijavne podatke in poskusite znova.',
+	'Login:' => 'Prijava:',
+	'Memory usage:' => 'Poraba pomnilnika:',
+	'Metadata' => 'Meta podatki',
+	'Modify' => 'Urejanje',
+	'Name' => 'Ime',
+	'New Layout' => 'Nova postavitev',
+	'New Snippet' => 'Nov izrezek',
+	'New User' => 'Nov uporabnik',
+	'No comments found.' => 'Ni najdenih komentarjev.',
+	'Only for filter in pages, NOT in snippets' => 'Samo za filtre v straneh, NE v izrezkih',
+	'Optional. Please use a valid e-mail address.' => 'Neobvezno. Prosimo uporabite veljaven e-mail naslov.',
+	'Page' => 'Stran',
+	'Page :title has been deleted!' => 'Stran :title je bila izbrisana!',
+	'Page :title has not been deleted!' => 'Stran :title ni bila izbrisana!',
+	'Page Title' => 'Naslov strani',
+	'Page Type' => 'Tip strani',
+	'Page has been saved!' => 'Stran je bila shranjena!',
+	'Page has not been saved!' => 'Stran ni bila shranjena!',
+	'Page not found!' => 'Stran ni bila najdena!',
+	'Page options' => 'Opcije strani',
+	'Page rendered in' => 'Stran izrisana v',
+	'Pages' => 'Strani',
+	'Password' => 'Geslo',
+	'Password and Confirm are not the same or too small!' => 'Geslo in potrditveno geslo se ne ujemata ali pa sta prekratki!',
+	'Plugin' => 'Vtičnik',
+	'Plugins' => 'Vtičniki',
+	'Protected' => 'Zaščiten',
+	'Published' => 'Objavljeno',
+	'Published date' => 'Datum objave',
+	'Reject' => 'Zavrni',
+	'Remember me for 14 days' => 'Zapomni si me za 14 dni',
+	'Remove Layout' => 'Odstrani postavitev',
+	'Remove Tab' => 'Odstrani zavihek',
+	'Remove page' => 'Odstrani stran',
+	'Required.' => 'Zahtevano.',
+	'Reviewed' => 'Pregledano',
+	'Roles' => 'Vloge',
+	'Roles restrict user privileges and turn parts of the administrative interface on or off.' => 'Vloge omejijo privilegije uporabnikov in vključijo ali izključijo dele administrativnega vmesnika.',
+	'Save' => 'Shrani',
+	'Save and Close' => 'Shrani in zapri',
+	'Save and Continue Editing' => 'Shrani in nadaljuj z urejanjem',
+	'Send password' => 'Pošlji geslo',
+	'Settings' => 'Nastavitve',
+	'Settings has been saved!' => 'Nastavitve so bile shranjene!',
+	'Show Calendar' => 'Pokaži koledar',
+	'Slug' => 'Vzdevek',
+	'Snippet' => 'Izrezek',
+	'Snippet :name has been deleted!' => 'Izrezek :name je bil izbrisan!',
+	'Snippet :name has been saved!' => 'Izrezek :name je bil shranjen!',
+	'Snippet :name has not been deleted!' => 'Izrezek :name ni bil shranjen!',
+	'Snippet :name has not been saved. Name must be unique!' => 'Izrezek :name ni bil shranjen. Ime mora biti unikatno!',
+	'Snippet has been added!' => 'Izrezek je bil dodan!',
+	'Snippet has not been added. Name must be unique!' => 'Izrezek ni bil dodan. Ime mora biti unikatno!',
+	'Snippet not found!' => 'Izrezek ni bil najden!',
+	'Snippets' => 'Izrezki',
+	'Snippets are generally small pieces of content which are included in other pages or layouts.' => 'Izrezki so delci vsebine, ki jih lahko uporabite v straneh in postavitvah.',
+	'Status' => 'Status',
+	'Tag to use this snippet' => 'Koda za uporabo izrezka',
+	'Tags' => 'Oznake',
+	'Thank you for using' => 'Hvala za uporabo',
+	'The avatars are automatically linked for those with a <a href="http://www.gravatar.com/" target="_blank">Gravatar</a> (a free service) account.' => 'Avatarji so avtomatsko povezani za tiste z <a href="http://www.gravatar.com/" target="_blank">Gravatar</a> (brezplačen servis) uporabniškim računom.',
+	'This allows you to specify which tab (controller) you will see by default after login.' => 'Nastavite zavihek, katerega boste privzeto videli po prijavi.',
+	'This plugin CANNOT be enabled! It requires Frog version :v.' => 'Aktivacija vtičnika je spodletela. Zahteva Frog verzije :v.',
+	'This will change your Administration theme.' => 'Spremenite temo administrativnega vmesnika.',
+	'This will set your language for the backend.' => 'Nastavite jezik ozadja (backend).',
+	'Use layouts to apply a visual look to a Web page. Layouts can contain special tags to include
+  page content and other elements such as the header or footer. Click on a layout name below to
+  edit it or click <strong>Remove</strong> to delete it.' => 'Uporabite postavitve za izdelavo ogrodja grafične teme. Kliknite na ime postavitve za urejanje oz. <strong>Odstrani</strong> za izbris.',
+	'User <strong>:name</strong> has been deleted!' => 'Uporabnik <strong>:name</strong> je bil izbrisan!',
+	'User <strong>:name</strong> has not been deleted!' => 'Uporabnik <strong>:name</strong> ni bil izbrisan!',
+	'User has been added!' => 'Uporabnik je bil dodan',
+	'User has been saved!' => 'Uporabnik je bil shranjen.',
+	'User has not been added!' => 'Uporabnik ni bil dodan!',
+	'User has not been saved!' => 'Uporabnik ni bil shranjen!',
+	'User not found!' => 'Ni mogoče najti uporabnika!',
+	'Username' => 'Uporabniško ime',
+	'Username must contain a minimum of 3 characters!' => 'Uporabniško ime mora vsebovati vsaj 3 znake!',
+	'Users' => 'Uporabniki',
+	'Version' => 'Verzija',
+	'View Site' => 'Poglej stran',
+	'View this page' => 'Poglej to stran',
+	'Website' => 'Spletna stran',
+	'What is a Layout?' => 'Kaj je postavitev?',
+	'What is a Snippet?' => 'Kaj je izrezek?',
+	'When enabled, only users who are an administor can edit the page.' => 'Ko je vključeno, lahko to stran urejajo samo uporabniki z administracijskimi dovoljenji.',
+	'When enabled, users have to login before they can view the page.' => 'Ko je vkljuleno, lahko to stran pregledujejo samo prijavljeni uporabniki.',
+	'Where do the avatars come from?' => 'Od kod so avatarji?',
+	'You are currently logged in as' => 'Prijavljeni ste kot',
+	'You do not have permission to access the requested page!' => 'Nimate dovoljenja za dostop do zahtevane strani!',
+	'You have to specify a content-type!' => 'Definirati morate tip vsebine (content-type)!',
+	'You have to specify a name!' => 'Definiati morate ime!',
+	'You have to specify a title!' => 'Definirati morate naslov!',
+	'by' => 'od',
+	'copy' => 'kopiraj',
+	'error' => 'napaka',
+	'inherit' => 'podeduj',
+	'latest' => 'najnovejši',
+	'n/a' => 'ni na razpolago',
+	'none' => 'brez',
+	'not required' => 'ni obvezno',
+	'on' => 'na',
+	'or' => 'ali',
+	'reorder' => 'razvrsti',
+	'required' => 'zahtevan',
+	'seconds' => 'sekund',
+	'unknown' => 'neznan',
+	'website:' => 'spletna stran:',
+    );
