@@ -1,0 +1,59 @@
+<?php
+
+    /**
+     * Slovenian file for plugin comment
+     *
+     * @package frog
+     * @subpackage plugin.comment.translations
+     *
+     * @author Andrej Čremožnik <andrej.cremoznik@gmail.com>
+     * @version Frog 0.9.5
+     */
+
+    return array(
+    	'A comment was added.' => 'Komentar je bil dodan.',
+	'Approve' => 'Odobritev',
+	'Are you sure you wish to delete it?' => 'Ali ste prepričani, da želite izbrisati?',
+	'Auto approve' => 'Avtomatska odobritev',
+	'Body' => 'Telo',
+	'Cancel' => 'Prekliči',
+	'Choose yes if you want to use a captcha to protect yourself against spammers.' => 'Izberi da, če se želiš zaščititi pred spammer-ji s captcha (slika z avtomatsko generirano kodo).',
+	'Choose yes if you want your comments to be auto approved. Otherwise, they will be placed in the moderation queue.' => 'Izberi da, če želiš, da so komentarji avtomatsko odobreni, sicer bodo postavljeni v vrsto za pregled.',
+	'Closed' => 'Zaprto',
+	'Comment has been approved!' => 'Komentar je odobren!',
+	'Comment has been deleted!' => 'Komentar je izbrisan!',
+	'Comment has been saved!' => 'Komentar je shranjen!',
+	'Comment has been unapproved!' => 'Komentar je neodobren!',
+	'Comment has not been deleted!' => 'Komentar ni bil izbrisan',
+	'Comment has not been saved!' => 'Komentar ni bil shranjen!',
+	'Comment not found!' => 'Komentarja ni moč najti!',
+	'Comments' => 'Komentarji',
+	'Comments Plugin' => 'Vtičnik za komentarje',
+	'Comments per page' => 'Komentarjev na stran',
+	'Comments settings' => 'Nastavitve komentarjev',
+	'Delete' => 'Izbriši',
+	'Documentation' => 'Dokumentacija',
+	'Edit comment' => 'Uredi komentar',
+	'Enhance comments tab' => 'Izboljšaj zavihek s komentarji',
+	'Incorrect result value. Please try again:' => 'Napačen rezultat. Prosimo poskusite ponovno:',
+	'Moderation' => 'Pregled',
+	'No' => 'Ne',
+	'No comments found for moderation.' => 'Ni komentarjev za pregled.',
+	'No comments found.' => 'Ni najdenih komentarjev.',
+	'Open' => 'Odpri',
+	'Please insert the result of the arithmetical operation from the following image:' => 'Prosim izračunajte vrednost operacije z naslednje slike:',
+	'Please insert the result of the arithmetical operation from this image.' => 'Prosim izračunajte vrednost operacije s slike:',
+	'Reject' => 'Zavrni',
+	'Save' => 'Shrani',
+	'Sets the number of comments to be displayed per page in the backend.' => 'Nastavi število prikazanih komentarjev na stran v ozadju (backend).',
+	'Settings' => 'Nastavitve',
+	'Thank you for your comment. It has been added.' => 'Komentar je dodan. Hvala!',
+	'Thank you for your comment. It is waiting for approval.' => 'Komentar čaka na odobritev. Hvala!',
+	'The settings have been updated.' => 'Nastavitve so posodobljene.',
+	'Use captcha' => 'Uporabi captcha',
+	'Yes' => 'Da',
+	'about' => 'o',
+	'comment not found!' => 'komentarja ni moč najti!',
+	'none' => 'brez',
+	'or' => 'ali',
+    );
