@@ -1,0 +1,20 @@
+<?php
+
+    /**
+     * Slovenian file for plugin skeleton
+     *
+     * @package frog
+     * @subpackage plugin.skeleton.translations
+     *
+     * @author Andrej Čremožnik <andrej.cremoznik@gmail.com>
+     * @version Frog 0.9.5
+     */
+
+    return array(
+    	'A sidebar' => 'Stranski stolpec',
+	'Display settings page here!' => 'Tukaj prikaži stran z nastavitvami!',
+	'Display your documentation here!' => 'Tukaj prikaži dokumentacijo!',
+	'Documentation' => 'Dokumentacija',
+	'Put something here, or leave out the sidebar entirely.' => 'Vstavi nekaj sem, ali pa povsem izpusti stranski stolpec.',
+	'Settings' => 'Nastavitve',
+    );
